tests/paczka1/fuzzy1/45841108.err
Error in line 4: Zzdt A143 99,6
Error in line 7: YfHdTzJP A143 51,1
Error in line 5: A143 S48 7,3
Error in line 17: Zzdt A143 20,6
Error in line 8: 94w S48 25,9
Error in line 20: Zzdt A775 100,6
Error in line 2: FzrSdhp7v A775 23,3
Error in line 24: YfHdTzJP S48 88,2
Error in line 32: YfHdTzJP A143 87,8
Error in line 35: Zzdt A775 -3,2
Error in line 21: a2jeixSIo A775 4,0
